--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <div>
       <h1>Exemple PWA</h1>
       <p>Pour <a href="https://tmlft.com/">TimeLeft</a></p>
-      <button>Ajouter à l'écran d'accueil</button>
-      <button class="add-button">Add to home screen</button>
+      <button class="add-button">Ajouter à l'écran d'accueil</button>
     </div>
   </body>
 </html>
