Fix - Button wasn't centered ; Working improved and more time between images

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <h1>Exemple PWA</h1>
       <p>Pour <a href="https://tmlft.com/">TimeLeft</a></p>
       <button class="add-button">Ajouter à l'écran d'accueil</button>
+      <button class="add-buttdsfdson">Ajouter à l'écran d'accueil</button>
     </div>
   </body>
 </html>
