--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
+    <script src="manup.js"></script>
   </head>
   <body>
     <div>
